# ytaudio

./: .gitignore  README.md  docker-compose.local-dev.yml  docker-compose.local-staging.yml
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
api/config/: .env.template
api/server/: __init__.py  asgi.py  celery.py  conftest.py  settings.py  settings_staging.py  settings_test.py  urls.py
api/server/apps/users/: pagination.py  sample_view.py  serializers.py  views.py
api/server/apps/users/fixtures/: auth.json
api/server/apps/users/tests/: conftest.py  test_jwt_auth.py  test_session_auth.py
api/server/apps/video_tasks/: apps.py  dl_service.py  serializers.py  tasks.py  urls.py  views.py
api/server/apps/video_tasks/api/: consumers.py  consumers_chat.py  routing.py  urls.py
api/server/apps/video_tasks/migrations/: 0001_initial.py  0002_alter_videosource_url.py  0002_videosource_url.py  0003_videosource_channel_videosource_duration_and_more.py
api/server/apps/video_tasks/models/: __init__.py  video_source.py
api/server/apps/video_tasks/tests/: test_tasks.py
api/server/apps/video_tasks/tests/data/: video_metadata_fixture.json
api/server/misc/: kill_worker.sh
api/server/settings/: __init__.py
api/server/settings/components/: __init__.py  base.py  celery.py  databases.py  rest_framework.py
api/server/settings/environments/: development.py  local.py  production.py
frontend/: .dockerignore  .editorconfig  .eslintrc.cjs  Dockerfile  README.md  components.d.ts  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  ems.ts  main.ts
frontend/src/components/: UserClass.ts  UsersList.vue  VideoTask.vue  task.ts
frontend/src/components/common/: LoginForm.vue
frontend/src/filters/: formatters.ts
frontend/src/interfaces/: tasks.ts
frontend/src/notifications/: connect.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  ls.ts  notify.ts  tasks.ts  users.ts
frontend/src/styles/: index.scss
frontend/src/styles/element/: index.scss
frontend/src/views/: AboutView.vue  DebugView.vue  HomeView.vue  SingleTaskView.vue  TasksView.vue
nginx/: Dockerfile  prod.conf
